[project]
name = "aibnbclean"
version = "2.7.0.0"
description = "airbnb cleaning notification automation tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Erik Whitesides", email = "eklevjer@gmail.com" }]
keywords = ["airbnb", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]
dependencies = [
  "recurring-ical-events==3.6.0",
  "requests==2.32.3",
  "google-genai==1.16.1",
  "google-api-python-client==2.170.0",
  "twilio==9.6.2",
  "todoist_api_python==3.1.0",
  "playwright>=1.60.0",
  "dotenv>=0.9.9",
]

[project.scripts]
aibnbclean_login = "login:login"
aibnbclean_process = "process:process"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aibnbclean"]

[tool.hatch.build.targets.wheel.sources]
"aibnbclean" = ""
